--- a/weather_statistics_app/templates/index.html
+++ b/weather_statistics_app/templates/index.html
@@ -2,20 +2,27 @@
 
 {% block content %}
 <body>
-    <div class="w3-row-padding menu">
-        <div class="w3-third">
-            <select class="w3-select choose-city" name="option">
-                <option value="" disabled selected>Выберите город</option>
-                <option value="1">Санкт-Петербург</option>
-                <option value="2">Москва</option>
-                <option value="3">Челябинск</option>
-            </select>
+    <form action="../forms.py" method="POST">
+        {% csrf_token %}
+        <div class="w3-row-padding menu">
+            <div class="w3-third">
+                <select class="w3-select choose-city" id="city" name="option">
+                    <option value="" disabled selected>Выберите город</option>
+                    <option value="Санкт-Петербург">Санкт-Петербург</option>
+                    <option value="Москва">Москва</option>
+                    <option value="Челябинск">Челябинск</option>
+                </select>
+            </div>
+            <div class="w3-third">        	
+                <input type="date" class="form-control calendar period_start" id="period_start" name="period_start" placeholder="Дата" required>
+            </div>
+            <div class="w3-third">        	
+                <input type="date" class="form-control calendar period_end" id="period_end" name="period_end" placeholder="Дата" required>
+            </div>
         </div>
-        <div class="w3-third">        	
-            <input type="date" class="form-control calendar" id="date" name="date" placeholder="Дата" required>
-        </div>
-    </div>
-    <button type="button" class="btn btn-success btn-lg btn-block">Показать статистику</button>
+        <button type="submit" class="btn btn-success btn-lg btn-block"> Показать статистику</button> 
+    </form>
+    
 </body>
 {% endblock content %}
 
