--- a/weather_statistics_app/templates/index.html
+++ b/weather_statistics_app/templates/index.html
@@ -1,7 +1,22 @@
-{% extends "wrapper.html" %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Погодная статистика</title>
+    {% load staticfiles %}
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="{% static 'css/main.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">     
+</head>
 
-{% block content %}
 <body>
+        {% block content %}
+
+        {% endblock content %}
+
     <form action="../forms.py" method="POST">
         {% csrf_token %}
         <div class="w3-row-padding menu">
@@ -20,9 +35,10 @@
                 <input type="date" class="form-control calendar period_end" id="period_end" name="period_end" placeholder="Дата" required>
             </div>
         </div>
-        <button type="submit" class="btn btn-success btn-lg btn-block"> Показать статистику</button> 
+        <button data-target="#myModal" type="submit" class="btn btn-success btn-lg btn-block" data-toggle="modal"> Показать статистику</button> 
     </form>
     
+
 </body>
-{% endblock content %}
+
 
