files with cities' info were changed

--- a/weather_statistics_app/templates/index.html
+++ b/weather_statistics_app/templates/index.html
@@ -23,12 +23,21 @@
             <div class="w3-third">
                 <select class="w3-select choose-city" id="city" name="option" required>
                     <option value="" disabled selected>Выберите город</option>
-                    <option value="Санкт-Петербург">Санкт-Петербург</option>
-                    <option value="Москва">Москва</option>
-                    <option value="Челябинск">Челябинск</option>
-                    <option value="Екатеринбург">Екатеринбург</option>
+                    <option value="Берлин">Берлин</option>
                     <option value="Владивосток">Владивосток</option>
+                    <option value="Екатеринбург">Екатеринбург</option>
+                    <option value="Минск">Минск</option>
+                    <option value="Москва">Москва</option>
                     <option value="Нижний Новгород">Нижний Новгород</option>
+                    <option value="Омск">Омск</option>
+                    <option value="Осло">Осло</option>
+                    <option value="Пермь">Пермь</option>
+                    <option value="Прага">Прага</option>
+                    <option value="Ростов-на-Дону">Ростов-на-Дону</option>
+                    <option value="Самара">Самара</option>
+                    <option value="Санкт-Петербург">Санкт-Петербург</option>
+                    <option value="Хельсинки">Хельсинки</option>
+                    <option value="Челябинск">Челябинск</option>
                 </select>
             </div>
             <div class="w3-third">        	
