--- a/weather_statistics_app/static/css/main.css
+++ b/weather_statistics_app/static/css/main.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(../img/background2.jpg) no-repeat;
+    background-image: url(../img/background2.jpg);
 }
 
 .btn-success{
